# bio_task

./: LICENSE  Makefile  README.md
service/: Cargo.toml  example.password.toml
service/fin_config/: default.toml  development.toml
service/src/: errors.rs  global.rs  lib.rs  main.rs  models.rs  std_ext.rs
service/src/backend/: mod.rs  tasks_backend.rs  user_backend.rs
service/src/data/: db_types.rs  mod.rs
service/src/server/: api.rs  auth.rs  mod.rs  projects_server.rs  tasks_server.rs  user_server.rs
website/: package-lock.json  package.json
website/src/: index.html  index.js
website/src/components/: NavView.vue
website/src/components/login-view/: index.vue
website/src/components/task-view/: TaskModal.vue  TaskView.vue  index.vue  models.ts
