[package]
name = "bio_task"
version = "0.1.0"
authors = ["toidiu <apoorv@toidiu.com>"]
description = "Server for task management"
edition = '2018'
publish = false

[dependencies]
chrono = { version = "~0.4", features = ["serde"] }
slog = "~2.4"
slog-term = "~2.4"
slog-async = "~2.3"
lazy_static = "~1.3"
time = "~0.1"

mysql = "16.0.2"
r2d2 = "~0.8"
r2d2_mysql = "16.0.0"

warp = "0.1.11"
http = "~0.1"

serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"


